--- a/POO-RETO01/Reto01/src/vistas/RegistraFacturas.form
+++ b/POO-RETO01/Reto01/src/vistas/RegistraFacturas.form
@@ -153,6 +153,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="jTextField1">
+      <Properties>
+        <Property name="focusCycleRoot" type="boolean" value="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
